--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cinema Team 3</title>
-    <!-- CSS -->
-    <link rel="stylesheet" href="css/style.css">
-    <!-- Bootstrap 5 -->+
+    <!-- Bootstrap 5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <!-- FONTAWESOME -->
     <script src="https://kit.fontawesome.com/eef5852768.js" crossorigin="anonymous"></script>
+     <!-- CSS -->
+     <link rel="stylesheet" href="/css/style.css">
+
 </head>
 <body>
+
 
 
     <!-- Bootstrap 5 SCRIPT -->
