--- a/index.html
+++ b/index.html
@@ -15,6 +15,59 @@
 </head>
 <body>
 
+    <main>
+        <!-- CAROUSEL -->
+        <section >
+            <div id="carouselExampleCaptions" class="carousel slide">
+                <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <video class="carousel-img d-block w-100" autoplay loop muted poster="imagen-previa.jpg">
+                        <source src="/videos/el-encargado-video.MOV" type="video/mp4">
+                        Tu navegador no soporta la etiqueta de video.
+                    </video>
+                      
+                    <div class=" carousel-caption d-md-block text-white">
+                        <div class="carousel_content d-flex flex-column align-items-start text-start">
+                            <h2 class="carousel_titulo fw-bold ">EL ENCARGADO</h2>
+                            <p class="carousel_desc">Esta comedia dramatica sigue a Eliseo, el encargado entrometido y manipulador de un edificio.</p>
+                            <div class="botones d-flex fw-bold"> 
+                                <button class="carousel_boton btn btn-light btn-lg m-2 ">VER AHORA</button>
+                                <button class="carousel_boton btn btn-dark btn-lg m-2">DETALLES</button>
+                            </div>     
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="/img/peliculas-series/series-principales/loki.webp" class="carousel-img d-block w-100" alt="...">
+                    <div class="carousel-caption d-md-block">
+                    <h5>Second slide label</h5>
+                    <p>Some representative placeholder content for the second slide.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="/img/peliculas-series/pelis-accion/cuidado-bebe-suelto.webp" class="carousel-img d-block w-100" alt="...">
+                    <div class="carousel-caption d-md-block">
+                    <h5>Third slide label</h5>
+                    <p>Some representative placeholder content for the third slide.</p>
+                    </div>
+                </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
+    </main>
 
 
     <!-- Bootstrap 5 SCRIPT -->
