--- a/index.html
+++ b/index.html
@@ -11,10 +11,74 @@
     <script src="https://kit.fontawesome.com/eef5852768.js" crossorigin="anonymous"></script>
      <!-- CSS -->
      <link rel="stylesheet" href="/css/style.css">
-
+    <link rel="shortcut icon" href="/img/peliculas-series/img-logo-favicon.png" type="image/x-icon">
 </head>
 <body>
 
+    <!-- Navbar -->
+
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#"><img src="/img/peliculas-series/img-logo.png" alt="logo-pag" width="200px"></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Películas</a>
+              </li>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Series</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Planes</a>
+              </li>
+            </ul>
+            <form class="d-flex" role="search">
+              <input class="form-control me-2" type="search" placeholder="Buscar película o serie" aria-label="Search">
+              <button class="btn btn-outline-light" type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+            </form>
+            <br>
+            <ul class="navbar-nav">
+            <li class="nav-item ms-4 me-3">
+                <a class="nav-link" href="#"><i class="fa-solid fa-user fa-xl"></i></a>
+          </div>
+        </ul>
+        </div>
+      </nav>
+
+      <!-- Footer -->
+
+      <footer>
+        <div class="contenedor_footer container-fluid d-flex bg-dark flex-column">
+          <div class="row justify-content-center align-items-center w-100 p-2">
+            <div class="col-lg-3">
+              <img src="/img/peliculas-series/img-logo.png" alt="" width="200px">
+            </div>
+            <div class="col-lg-3">
+              <a href="#"><i class="fa-brands fa-whatsapp fa-xl"></i></a>
+              <a href="#"><i class="fa-brands fa-instagram fa-xl"></i></a>
+              <a href="#"><i class="fa-brands fa-twitter fa-xl"></i></a>
+            </div>
+            <div class="col-lg-3">
+              <a href="#">Contacto</a>
+            </div>
+            <div class="col-lg-3">
+              <a href="#">Acerca de nosotros</a>
+            </div>
+          </div>
+          <div class="row justify-content-center align-items-center w-100 p-2">
+            <div class="col-lg-12">
+              <p class="text-center ps-5">Team 3 - Todos los derechos reservados</p>
+            </div>
+          </div>     
+        </div>
+    </footer>
 
 
     <!-- Bootstrap 5 SCRIPT -->
