cree la seccion de series sugeridas en el home

--- a/index.html
+++ b/index.html
@@ -212,6 +212,49 @@
             </div>
 
         </section>
+        
+        <section>
+        <!-- SERIES SUGERIDAS -->
+
+        <div class="container" id="seriesaclamadas">
+        <p class="text-white text-center-fw-bold h2 mt-3"> Series
+            Sugeridas <i class="fa-regular fa-star fa-xs"></i></p>
+    </div>
+    <section class="container_flex container mb-5">
+        <div class="div_animations">
+            <a href="#"><img src="/img/peliculas-series/series-principales/el encargado.webp" height="250" width="350"
+                    alt="movie-poster" class="img-box"></a>
+        </div>
+        <div class="div_animations">
+            <a href="#"><img src="/img/peliculas-series/series-principales/daredevil.webp" height="250" width="350"
+                    alt="movie-poster" class="img-box"></a>
+        </div>
+        <div class="div_animations">
+            <a href="#"><img src="/img/peliculas-series/series-principales/falcon.webp" height="250"
+                    width="350" alt="movie-poster" class="img-box"></a>
+        </div>
+        <div class="div_animations">
+            <a href="#"><img src="/img/peliculas-series/series-principales/impuros.webp" height="250" width="350"
+                    alt="movie-poster" class="img-box"></a>
+        </div>
+        <div class="div_animations">
+            <a href="#"><img src="/img/peliculas-series/series-principales/la voz ausente.webp" height="250"
+                    width="350" alt="movie-poster" class="img-box"></a>
+        </div>
+        <div class="div_animations">
+            <a href="#"><img src="/img/peliculas-series/series-principales/loki.webp" height="250" width="350"
+                    alt="movie-poster" class="img-box"></a>
+        </div>
+        <div class="div_animations">
+            <a href="#"><img src="/img/peliculas-series/series-principales/swat.webp" alt="movie-poster"
+                    height="250" width="350" class="img-box"></a>
+        </div>
+        <div class="div_animations">
+            <a href="#"><img src="/img/peliculas-series/series-principales/the-old-man.webp" height="250" width="350"
+                    alt="movie-poster" class="img-box"></a>
+        </div>
+        </section>
+
 
     </main>
 
