--- a/index.html
+++ b/index.html
@@ -216,15 +216,15 @@
          <!-- Publicidad -->
 
 
- <section class="publicidad py-5">
+ <section class="publicidad bg-gradient py-5">
   <div class="container">
     <div class="row">
       <div class="col-md-6 d-flex flex-column justify-content-center align-items-center text-center pb-5 mt-3">
         <h1 class="display-4 mb-4 fw-bold">Planes <br>50% Off</h1>
-        <p class="lead text-bg-danger mb-4">Standard con publicidad | Premium | Familiar</p>
-        <a href="#" class="btn btn-warning text-white">Suscribirse</a>
+        <p class="lead text-bg-light fw-bolder mb-4 px-2">Standard con publicidad | Premium | Familiar</p>
+        <a href="#" class="btn btn-warning text-black">Suscribirse</a>
       </div>
-      <div class="col-md-6 d-flex justify-content-center flex-wrap ">
+      <div class="galeria_publicidad col-md-6 d-flex justify-content-center flex-wrap ">
         <img src="/img/peliculas-series/pelis-accion/capitan-america.webp" alt="Capitán América" class="gallery_img ">
         <img src="/img/peliculas-series/series-principales/el encargado.webp" alt="Cars 3" class="gallery_img ">
         <img src="/img/peliculas-series/pelis-principales/cars-3.webp" alt="Ant-Man" class="gallery_img ">
