Terminada segunda pagina de pelculas, falta agregar href a los links

--- a/peliculas2.html
+++ b/peliculas2.html
@@ -72,30 +72,24 @@
         <div class="row justify-content-center ">
             <div class="col-lg-5 col-md-6 mb-4">
                 <div class="card">
-                    <img src="img/peliculas-series/pelis-accion/-de-matar.webp" alt="">
+                    <img src="img/peliculas-series/pelis-accion/enemigo-publico.webp" alt="">
                     <div class="card_body  dark  d-flex flex-column">
-                        <h2 class="card_title">Duro de Matar</h2>
-                        <p class="card_info">Un grupo terrorista se apodera de un edificio de Los Ángeles y toma a
-                            un
-                            grupo de
-                            personas como rehenes. El policía de Nueva York John McClane consigue escapar del acoso
-                            terrorista.
-                            Aunque está solo y fuera de servicio, McClane decide enfrentarse a los secuestradores y
-                            se
-                            convierte
-                            en la única esperanza para los rehenes.</p>
+                        <h2 class="card_title">Enemigo Publico</h2>
+                        <p class="card_info">Un abogado se convierte en el objetivo de un político corrupto y de sus
+                            matones de la Agencia de Seguridad tras recibir por accidente las pruebas un crimen
+                            político.</p>
                         <a class="card_btn btn">Ver Ahora</a>
                     </div>
                 </div>
             </div>
             <div class="col-lg-5 col-md-6 mb-4">
                 <div class="card">
-                    <img src="img/peliculas-series/pelis-accion/ant-man-wasp.webp" alt="">
+                    <img src="img/peliculas-series/pelis-accion/proyecto-geminis.webp" alt="">
                     <div class="card_body dark d-flex flex-column">
-                        <h2 class="card_title">Ant-man and Wasp</h2>
-                        <p class="card_info">Scott Lang vuelve a enfundarse el traje de Ant-Man para pelear codo con
-                            codo junto a la Avispa. La misión revelará a los dos superhéroes un secreto terrible y los
-                            enfrentará a su enemigo más poderoso.
+                        <h2 class="card_title">Proyecto geminis</h2>
+                        <p class="card_info">Henry Bogan, un asesino a sueldo, pretende retirarse porque se siente
+                            viejo. Sin embargo, hay alguien que no está dispuesto a permitírselo porque tiene la misión
+                            de matarlo: un clon suyo más joven, más rápido y más fuerte.
                         </p>
                         <a class="card_btn btn">Ver Ahora</a>
                     </div>
@@ -106,26 +100,25 @@
         <div class="row justify-content-center ">
             <div class="col-lg-5 col-md-6 mb-4">
                 <div class="card">
-                    <img src="img/peliculas-series/pelis-accion/avatar.webp" alt="">
+                    <img src="img/peliculas-series/pelis-accion/john-carter.webp" alt="">
                     <div class="card_body dark d-flex flex-column">
-                        <h2 class="card_title">Avatar</h2>
-                        <p class="card_info">Jake Sully, un exinfante de marina, usa un Avatar para moverse por Pandora,
-                            un planeta donde los Na'vi viven y el ambiente es peligroso para los humanos. Durante su
-                            misión, se enamora de una mujer Na'vi.
+                        <h2 class="card_title">John Carter</h2>
+                        <p class="card_info">John Carter, un veterano de la Guerra Civil norteamericana, es trasladado
+                            misteriosamente a Marte. Allí deberá tomar parte en el conflicto de sus pobladores al
+                            descubrir que la supervivencia de sus habitantes está en sus manos.
                         </p>
-                        <a class="card_btn btn">Ver Ahora</a>
+                        <button class="card_btn">Ver Ahora</button>
                     </div>
                 </div>
             </div>
             <div class="col-lg-5 col-md-6 mb-4">
                 <div class="card">
-                    <img src="img/peliculas-series/pelis-accion/capitan-america.webp" alt="">
+                    <img src="img/peliculas-series/pelis-accion/los-4-fantastico.webp" alt="">
                     <div class="card_body dark d-flex flex-column">
-                        <h2 class="card_title">Capitan America</h2>
-                        <p class="card_info">Steve Rogers quiere ser soldado, pero siempre es rechazado. Finalmente,
-                            participa en un experimento que lo convierte en el Capitán América y recibe su primera
-                            misión.</p>
-                        <a class="card_btn btn">Ver Ahora</a>
+                        <h2 class="card_title">Los 4 Fantasticos</h2>
+                        <p class="card_info">Durante un viaje espacial, cuatro astronautas se exponen a una extraña
+                            tormenta que altera su ADN y les dota de asombrosos superpoderes.</p>
+                        <button class="card_btn">Ver Ahora</button>
                     </div>
                 </div>
             </div>
@@ -134,25 +127,24 @@
         <div class="row justify-content-center ">
             <div class="col-lg-5 col-md-6 mb-4">
                 <div class="card">
-                    <img src="img/peliculas-series/pelis-accion/dia-de-la-independencia.webp" alt="">
+                    <img src="img/peliculas-series/pelis-accion/rapidos-furiosos-2.webp" alt="">
                     <div class="card_body dark d-flex flex-column">
-                        <h2 class="card_title">Dia de la Independencia</h2>
-                        <p class="card_info">Una flota de naves espaciales ataca la Tierra el 4 de julio, destruyendo
-                            grandes ciudades. Un grupo de supervivientes planea un contraataque para salvar el planeta
-                            antes de que sea demasiado tarde. </p>
-                        <a class="card_btn btn">Ver Ahora</a>
+                        <h2 class="card_title">Rapido y Furioso 2</h2>
+                        <p class="card_info">El expolicía Brian O'Conner y su amigo Roman Pearce vuelven al mundo de las
+                            carreras para transportar dinero sucio del criminal Carter Verone en Miami, mientras
+                            colaboran con la agente encubierta Mónica Clemente para derribar su imperio. </p>
+                        <button class="card_btn">Ver Ahora</button>
                     </div>
                 </div>
             </div>
             <div class="col-lg-5 col-md-6 mb-4">
                 <div class="card">
-                    <img src="img/peliculas-series/pelis-accion/rapido-furioso.webp" alt="">
+                    <img src="img/peliculas-series/pelis-accion/cuidado-bebe-suelto.webp" alt="">
                     <div class="card_body dark d-flex flex-column">
-                        <h2 class="card_title">Rapido y Furioso</h2>
-                        <p class="card_info">Dom Toretto y sus familias se enfrentan al peor enemigo imaginable, uno
-                            llegado desde el pasado con sed de venganza, dispuesto a cualquier cosa con tal de destruir
-                            todo aquello que Dom ama.</p>
-                        <a class="card_btn btn">Ver Ahora</a>
+                        <h2 class="card_title">Cuidado bebe suelto</h2>
+                        <p class="card_info">Unos granujas secuestran al hijo de una adinerada familia de Chicago pero
+                            el bebé se escapa y se embarca en una serie de aventuras por la ciudad.</p>
+                        <button class="card_btn">Ver Ahora</button>
                     </div>
                 </div>
             </div>
