pagina detallePelicula terminada, agruegue el video al trailer y quedo responsivo

--- a/detallePelicula.html
+++ b/detallePelicula.html
@@ -81,7 +81,7 @@
                     <a class="nav-link active fw-bold" aria-current="page" href="#">DETALLE</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link text-light" href="#">TRAILER</a>
+                    <a class="nav-link text-light" href="/detallePeliculaTrailer.html">TRAILER</a>
                     </li>
                 </ul>  
             </div>
@@ -94,7 +94,7 @@
                     vida, además de un condensador de flujo, Wade debe luchar contra ninjas, la yakuza y una manada
                     caninos sexualmente agresivos, mientras viaja por el mundo para descubrir la importancia de la 
                     familia, la amistad y el sabor - encontrado de un nuevo gusto por la aventura y ganando el codiciado
-                    título de taza de café de "Mejor amante del mundo"
+                    título de taza de café de "Mejor amante del mundo".
                 </h4>
 
                 <div class="container py-3">
