modifique un poco el texto

--- a/error404.html
+++ b/error404.html
@@ -15,11 +15,11 @@
   <link rel="shortcut icon" href="/img/peliculas-series/img-logo-favicon.png" type="image/x-icon">
 </head>
 <body class="bg-white">
-    <div class="container my-5 d-flex">
+    <div class="container d-flex my-5">
         <div class="row">
             <div class="col-lg-6 col-sm-12">
                 <h2> <b>404.</b> That's an error</h2>
-                <h3>The requested URL was not fount on this server. That's all know</h3>
+                <h3>The requested URL was not fount on this server. <span class="text-black-50">That's all know</span> </h3>
             </div>
             <div class="col-lg-6 col-sm-12">
                 <img class="float-end" src="/img/peliculas-series/img-error-404.png" alt="">
