--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
                         <a class="nav-link" aria-current="page" href="#">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Películas</a>
+                        <a class="nav-link" href="peliculas.html">Películas</a>
                     </li>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Series</a>
+                        <a class="nav-link" href="series.html">Series</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Planes</a>
@@ -212,71 +212,77 @@
             </div>
 
         </section>
-        
-         <!-- Publicidad -->
+
+        <!-- Publicidad -->
 
 
- <section class="publicidad bg-gradient py-5">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6 d-flex flex-column justify-content-center align-items-center text-center pb-5 mt-3">
-        <h1 class="display-4 mb-4 fw-bold">Planes <br>50% Off</h1>
-        <p class="lead text-bg-light fw-bolder mb-4 px-2">Standard con publicidad | Premium | Familiar</p>
-        <a href="#" class="btn btn-warning text-black">Suscribirse</a>
-      </div>
-      <div class="galeria_publicidad col-md-6 d-flex justify-content-center flex-wrap ">
-        <img src="/img/peliculas-series/pelis-accion/capitan-america.webp" alt="Capitán América" class="gallery_img ">
-        <img src="/img/peliculas-series/series-principales/el encargado.webp" alt="Cars 3" class="gallery_img ">
-        <img src="/img/peliculas-series/pelis-principales/cars-3.webp" alt="Ant-Man" class="gallery_img ">
-        <img src="/img/peliculas-series/pelis-principales/deadpool-2.webp" alt="El Encargado" class="gallery_img">
-      </div>
-    </div>
-  </div>
-</section>
+        <section class="publicidad bg-gradient py-5">
+            <div class="container">
+                <div class="row">
+                    <div
+                        class="col-md-6 d-flex flex-column justify-content-center align-items-center text-center pb-5 mt-3">
+                        <h1 class="display-4 mb-4 fw-bold">Planes <br>50% Off</h1>
+                        <p class="lead text-bg-light fw-bolder mb-4 px-2">Standard con publicidad | Premium | Familiar
+                        </p>
+                        <a href="#" class="btn btn-warning text-black">Suscribirse</a>
+                    </div>
+                    <div class="galeria_publicidad col-md-6 d-flex justify-content-center flex-wrap ">
+                        <img src="/img/peliculas-series/pelis-accion/capitan-america.webp" alt="Capitán América"
+                            class="gallery_img ">
+                        <img src="/img/peliculas-series/series-principales/el encargado.webp" alt="Cars 3"
+                            class="gallery_img ">
+                        <img src="/img/peliculas-series/pelis-principales/cars-3.webp" alt="Ant-Man"
+                            class="gallery_img ">
+                        <img src="/img/peliculas-series/pelis-principales/deadpool-2.webp" alt="El Encargado"
+                            class="gallery_img">
+                    </div>
+                </div>
+            </div>
+        </section>
 
 
 
         <section>
-        <!-- SERIES SUGERIDAS -->
+            <!-- SERIES SUGERIDAS -->
 
-        <div class="container" id="seriesaclamadas">
-        <p class="text-white text-center-fw-bold h2 mt-3"> Series
-            Sugeridas <i class="fa-regular fa-star fa-xs"></i></p>
-    </div>
-    <section class="container_flex container mb-5">
-        <div class="div_animations">
-            <a href="#"><img src="/img/peliculas-series/series-principales/el encargado.webp" height="250" width="350"
-                    alt="movie-poster" class="img-box"></a>
-        </div>
-        <div class="div_animations">
-            <a href="#"><img src="/img/peliculas-series/series-principales/daredevil.webp" height="250" width="350"
-                    alt="movie-poster" class="img-box"></a>
-        </div>
-        <div class="div_animations">
-            <a href="#"><img src="/img/peliculas-series/series-principales/falcon.webp" height="250"
-                    width="350" alt="movie-poster" class="img-box"></a>
-        </div>
-        <div class="div_animations">
-            <a href="#"><img src="/img/peliculas-series/series-principales/impuros.webp" height="250" width="350"
-                    alt="movie-poster" class="img-box"></a>
-        </div>
-        <div class="div_animations">
-            <a href="#"><img src="/img/peliculas-series/series-principales/la voz ausente.webp" height="250"
-                    width="350" alt="movie-poster" class="img-box"></a>
-        </div>
-        <div class="div_animations">
-            <a href="#"><img src="/img/peliculas-series/series-principales/loki.webp" height="250" width="350"
-                    alt="movie-poster" class="img-box"></a>
-        </div>
-        <div class="div_animations">
-            <a href="#"><img src="/img/peliculas-series/series-principales/swat.webp" alt="movie-poster"
-                    height="250" width="350" class="img-box"></a>
-        </div>
-        <div class="div_animations">
-            <a href="#"><img src="/img/peliculas-series/series-principales/the-old-man.webp" height="250" width="350"
-                    alt="movie-poster" class="img-box"></a>
-        </div>
-        </section>
+            <div class="container" id="seriesaclamadas">
+                <p class="text-white text-center-fw-bold h2 mt-3"> Series
+                    Sugeridas <i class="fa-regular fa-star fa-xs"></i></p>
+            </div>
+            <section class="container_flex container mb-5">
+                <div class="div_animations">
+                    <a href="#"><img src="/img/peliculas-series/series-principales/el encargado.webp" height="250"
+                            width="350" alt="movie-poster" class="img-box"></a>
+                </div>
+                <div class="div_animations">
+                    <a href="#"><img src="/img/peliculas-series/series-principales/daredevil.webp" height="250"
+                            width="350" alt="movie-poster" class="img-box"></a>
+                </div>
+                <div class="div_animations">
+                    <a href="#"><img src="/img/peliculas-series/series-principales/falcon.webp" height="250" width="350"
+                            alt="movie-poster" class="img-box"></a>
+                </div>
+                <div class="div_animations">
+                    <a href="#"><img src="/img/peliculas-series/series-principales/impuros.webp" height="250"
+                            width="350" alt="movie-poster" class="img-box"></a>
+                </div>
+                <div class="div_animations">
+                    <a href="#"><img src="/img/peliculas-series/series-principales/la voz ausente.webp" height="250"
+                            width="350" alt="movie-poster" class="img-box"></a>
+                </div>
+                <div class="div_animations">
+                    <a href="#"><img src="/img/peliculas-series/series-principales/loki.webp" height="250" width="350"
+                            alt="movie-poster" class="img-box"></a>
+                </div>
+                <div class="div_animations">
+                    <a href="#"><img src="/img/peliculas-series/series-principales/swat.webp" alt="movie-poster"
+                            height="250" width="350" class="img-box"></a>
+                </div>
+                <div class="div_animations">
+                    <a href="#"><img src="/img/peliculas-series/series-principales/the-old-man.webp" height="250"
+                            width="350" alt="movie-poster" class="img-box"></a>
+                </div>
+            </section>
 
 
     </main>
