--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="/css/style.css">
+     <!-- FAVICON -->
     <link rel="shortcut icon" href="/img/peliculas-series/img-logo-favicon.png" type="image/x-icon">
 </head>
 
@@ -42,7 +43,7 @@
                         <a class="nav-link" href="#">Series</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Planes</a>
+                        <a class="nav-link" href="/suscripcion.html">Planes</a>
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
@@ -54,7 +55,7 @@
                 <br>
                 <ul class="navbar-nav">
                     <li class="nav-item ms-4 me-3">
-                        <a class="nav-link" href="#"><i class="fa-solid fa-user fa-xl"></i></a>
+                        <a class="nav-link" href="/login.html"><i class="fa-solid fa-user fa-xl"></i></a>
             </div>
             </ul>
         </div>
@@ -222,7 +223,7 @@
       <div class="col-md-6 d-flex flex-column justify-content-center align-items-center text-center pb-5 mt-3">
         <h1 class="display-4 mb-4 fw-bold">Planes <br>50% Off</h1>
         <p class="lead text-bg-light fw-bolder mb-4 px-2">Standard con publicidad | Premium | Familiar</p>
-        <a href="#" class="btn btn-warning text-black">Suscribirse</a>
+        <a href="/suscripcion.html" class="btn btn-warning text-black">Suscribirse</a>
       </div>
       <div class="galeria_publicidad col-md-6 d-flex justify-content-center flex-wrap ">
         <img src="/img/peliculas-series/pelis-accion/capitan-america.webp" alt="Capitán América" class="gallery_img ">
