--- a/suscripcion.html
+++ b/suscripcion.html
@@ -99,12 +99,12 @@
   
               <div class="form-group">
                   <label for="nombre">Nombre</label>
-                  <input type="text" id="nombre" name="nombre" pattern="[a-zA-Z]{2,20}" required>
+                  <input type="text" id="nombre" name="nombre" pattern="[a-zA-Z]{2,20}" maxlength="20" required>
               </div>
               
               <div class="form-group">
                   <label for="apellido">Apellido</label>
-                  <input type="text" id="apellido" name="apellido" pattern="[a-zA-Z]{2,20}" required>
+                  <input type="text" id="apellido" name="apellido" pattern="[a-zA-Z]{2,20}" maxlength="20" required>
               </div>
   
           </div>
@@ -113,12 +113,12 @@
               <div class="form-row">
               <div class="form-group">
                   <label for="email">Email</label>
-                  <input type="email" id="email" name="email" pattern=".{8,30}" required>
+                  <input type="email" id="email" name="email" pattern=".{8,30}" maxlength="30" required>
               </div>
   
               <div class="form-group">
                   <label for="contraseña">Contraseña</label>
-                  <input type="password" id="contraseña" name="contraseña" pattern="(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{10,20}" required>
+                  <input type="password" id="contraseña" name="contraseña" pattern="(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{10,20}" maxlength="20" required>
               </div>
           </div>
   
@@ -126,7 +126,7 @@
              
               <div class="form-group">
                   <label for="contraseña2">Confirmar contraseña</label>
-                  <input type="password" id="contraseña2" name="contraseña2" pattern="(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{10,20}" required>
+                  <input type="password" id="contraseña2" name="contraseña2" pattern="(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{10,20}" maxlength="20" required>
               </div>                              
           </div>
   
