terminade la primera parte de la pagina detalleSerie

--- a/detalleSerie.html
+++ b/detalleSerie.html
@@ -68,7 +68,7 @@
                 <div class="carousel_content d-flex flex-column align-items-start text-start">
                     <h2 class="carousel_titulo fw-bold ">LOKI</h2>
                     <p class="">SERIE <b>HD</b> · 2021-2023 · 2 temporadas · Ciencia ficcion,Fantasía </p>
-                    <p class="carousel_desc">La secuela de la primera parte.</p>
+                    <p class="carousel_desc">El volátil villano Loki (Tom Hiddleston) retoma su papel como el Dios de las Mentiras.</p>
                     <div class="botones d-flex ">
                         <button class="carousel_boton btn btn-light btn-lg m-1">VER AHORA</button>
                     </div>
@@ -78,7 +78,7 @@
             <div class="contenedor_links container my-5">
                 <ul class="nav nav-tabs ">
                     <li class="nav-item">
-                        <a class="nav-link text-light" href="">EPISODIOS</a>
+                        <a class="nav-link text-light" href="/detalleSerie-episodios.html">EPISODIOS</a>
                         </li>
                     <li class="nav-item">
                     <a class="nav-link active fw-bold" aria-current="page" href="#">DETALLE</a>
@@ -90,34 +90,39 @@
             </div>
 
             <div class="detalle-pelicula container text-light">
-                <h2>Deadpool 2</h2>
+                <h2>Loki</h2>
                 <h4 class="fw-light">
+                En "loki", de Marver Studios, el volátil villano Loki (Tom Hiddleston)
+                retoma su papel como el Dios de las Mentiras en una nueva serie que
+                transcurre después de los eventos de "Avengers:Edgame". Kate Herron dirige
+                y Michael Waldron es el guionista peincipal. <br> <br>
+                Algunas secuencias o patrones de luces intermitentes pueden afectar a
+                espectadores fotosensibles.
                 </h4>
 
                 <div class="container py-3">
                     <div class="row">
                         <div class="col-6">
-                            <h5 class="text-secondary">Duracion:</h5>
-                            <h5>2h 2min</h5>
+                            <h5 class="text-secondary">Fecha de estreno:</h5>
+                            <h5>2021-2023</h5>
                         </div>
                         <div class="col-6">
-                            <h5 class="text-secondary">Dirigido por:</h5>
-                            <h5>David Leitch</h5>
+                            <h5 class="text-secondary">Creado por:</h5>
+                            <h5>Michael Waldron</h5>
                         </div>
                     </div>
                     
                     <div class="row">
                         <div class="col-6">
-                            <h5 class="text-secondary">Fecha de estreno:</h5>
-                            <h5>2018</h5>
+                            
                             <h5 class="text-secondary">Genero:</h5>
                             <h5>Ciencia ficcion, Comedia, Superhéroes, Acción y aventura</h5>
                             <h5 class="text-secondary">Clasificacion:</h5>
-                            <h5>16+</h5>
+                            <h5>14+</h5>
                         </div>
                         <div class="col-6">
                             <h5 class="text-secondary">Elenco:</h5>
-                            <h5>Ryan Reynolds <br>Josh Brolin <br>Morena Baccarin <br>Julian Dennison <br>Zazie Beetz <br>T.J. Miller</h5>
+                            <h5>Tom Hiddleston</h5>
                         </div>
                     </div>
 
