--- a/detalleSerie-episodios.html
+++ b/detalleSerie-episodios.html
@@ -90,9 +90,9 @@
             </div>
 
              <!-- Episodios -->
-            <section class="container d-flex  justify-content-center align-items-center mx-3" >
+            <section class="container d-flex  justify-content-center align-items-center" >
                     <div class="row">
-                        <div class="col-lg-4 col-md-6 col-sm-8">
+                        <div class="col-lg-4 col-md-6 col-sm-12">
                             <div class="contenedor_card">
                                 <div class="card_superposicion">
                                     <a href=""><img src="/img/peliculas-series/Loki/T1-E1.webp" class="card-img-top" alt="..."></a>
@@ -105,7 +105,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-8">
+                        <div class="col-lg-4 col-md-6 col-sm-12">
                             <div class="contenedor_card">
                                 <div class="card_superposicion">
                                     <a href=""><img src="/img/peliculas-series/Loki/T1-E2.webp" class="card-img-top" alt="..."></a>
@@ -118,7 +118,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-8">
+                        <div class="col-lg-4 col-md-6 col-sm-12">
                             <div class="contenedor_card">
                                 <div class="card_superposicion">
                                     <a href=""><img src="/img/peliculas-series/Loki/T1-E3.webp" class="card-img-top" alt="..."></a>
@@ -131,7 +131,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-8">
+                        <div class="col-lg-4 col-md-6 col-sm-12">
                             <div class="contenedor_card">
                                 <div class="card_superposicion">
                                     <a href=""><img src="/img/peliculas-series/Loki/T1-E4.webp" class="card-img-top" alt="..."></a>
@@ -144,7 +144,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-8">
+                        <div class="col-lg-4 col-md-6 col-sm-12">
                             <div class="contenedor_card">
                                 <div class="card_superposicion">
                                     <a href=""><img src="/img/peliculas-series/Loki/T1-E5.webp" class="card-img-top" alt="..."></a>
@@ -157,7 +157,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-8">
+                        <div class="col-lg-4 col-md-6 col-sm-12">
                             <div class="contenedor_card">
                                 <div class="card_superposicion">
                                     <a href=""><img src="/img/peliculas-series/Loki/T1-E6.webp" class="card-img-top" alt="..."></a>
