agregue el menu desplegable de temporadas, funciona todo bien

--- a/detalleSerie-episodios.html
+++ b/detalleSerie-episodios.html
@@ -89,6 +89,20 @@
                 </ul>  
             </div>
 
+            <!-- Menu desplegable -->
+            <div class="container">
+                <div class="btn-group">
+                    <button class="btn btn-secondary dropdown-toggle mb-3" type="button" data-bs-toggle="dropdown" data-bs-auto-close="true" aria-expanded="false">
+                      Temporada 1
+                    </button>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item bg-secondary text-white" href="#">Temporada 1</a></li>
+                      <li><a class="dropdown-item" href="#">Temporada 2</a></li>
+                    </ul>
+                  </div>
+            </div>
+            
+
              <!-- Episodios -->
             <section class="container d-flex  justify-content-center align-items-center" >
                     <div class="row">
