--- a/detalleSerie-episodios.html
+++ b/detalleSerie-episodios.html
@@ -84,7 +84,7 @@
                     <a class="nav-link  text-light"  href="/detalleSerie.html">DETALLE</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link text-light" href="">TRAILER</a>
+                    <a class="nav-link text-light" href="/detalleSerieTrailer.html">TRAILER</a>
                     </li>
                 </ul>  
             </div>
