--- a/detallePelicula.html
+++ b/detallePelicula.html
@@ -46,7 +46,7 @@
                 </ul>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Buscar película o serie"
-                        aria-label="Search">
+                        aria-label="Search" pattern=".{0,20}"  maxlength="20">
                     <button class="btn btn-outline-light" type="submit"><i
                             class="fa-solid fa-magnifying-glass"></i></button>
                 </form>
