enlazo la página de error en algunos href

--- a/login.html
+++ b/login.html
@@ -42,7 +42,7 @@
                   // Verificar si el formulario es válido
                   if (this.checkValidity()) {
                     // Si es válido, redirigir a la página de error personalizada
-                    window.location.href = '/index.html';
+                    window.location.href = '/error404.html';
                   } else {
                     // Si no es válido, mostrar los errores de validación nativos
                     this.reportValidity();
