--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="#">Inicio</a>
+                        <a class="nav-link" aria-current="page" href="/index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="peliculas.html">Películas</a>
@@ -225,29 +225,6 @@
                         <h1 class="display-4 mb-4 fw-bold">Planes <br>50% Off</h1>
                         <p class="lead text-bg-light fw-bolder mb-4 px-2">Standard con publicidad | Premium | Familiar
                         </p>
-                        <a href="#" class="btn btn-warning text-black">Suscribirse</a>
-                    </div>
-                    <div class="galeria_publicidad col-md-6 d-flex justify-content-center flex-wrap ">
-                        <img src="/img/peliculas-series/pelis-accion/capitan-america.webp" alt="Capitán América"
-                            class="gallery_img ">
-                        <img src="/img/peliculas-series/series-principales/el encargado.webp" alt="Cars 3"
-                            class="gallery_img ">
-                        <img src="/img/peliculas-series/pelis-principales/cars-3.webp" alt="Ant-Man"
-                            class="gallery_img ">
-                        <img src="/img/peliculas-series/pelis-principales/deadpool-2.webp" alt="El Encargado"
-                            class="gallery_img">
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section class="publicidad bg-gradient py-5">
-            <div class="container">
-                <div class="row">
-                    <div
-                        class="col-md-6 d-flex flex-column justify-content-center align-items-center text-center pb-5 mt-3">
-                        <h1 class="display-4 mb-4 fw-bold">Planes <br>50% Off</h1>
-                        <p class="lead text-bg-light fw-bolder mb-4 px-2">Standard con publicidad | Premium | Familiar
-                        </p>
                         <a href="/suscripcion.html" class="btn btn-warning text-black">Suscribirse</a>
                     </div>
                     <div class="galeria_publicidad col-md-6 d-flex justify-content-center flex-wrap ">
@@ -263,8 +240,6 @@
                 </div>
             </div>
         </section>
-
-
 
         <section>
             <!-- SERIES SUGERIDAS -->
