agregue los links a las pelis y series

--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
                                 <p class="carousel_desc">Tras robar el Teseracto en "Avengers: Endgame", Loki cae ante
                                     la Autoridad de Variación temporal.</p>
                                 <div class="botones d-flex ">
-                                    <button class="carousel_boton btn btn-light btn-lg m-1 ">VER AHORA</button>
-                                    <button class="carousel_boton btn btn-dark btn-lg m-1">DETALLES</button>
+                                    <a href="" class="carousel_boton btn btn-light btn-lg m-1 ">VER AHORA</a>
+                                    <a href="/detalleSerie-episodios.html" class="carousel_boton btn btn-dark btn-lg m-1">DETALLES</a>
                                 </div>
                             </div>
                         </div>
@@ -270,7 +270,7 @@
                             width="350" alt="movie-poster" class="img-box"></a>
                 </div>
                 <div class="div_animations">
-                    <a href="#"><img src="/img/peliculas-series/series-principales/loki.webp" height="250" width="350"
+                    <a href="/detalleSerie-episodios.html"><img src="/img/peliculas-series/series-principales/loki.webp" height="250" width="350"
                             alt="movie-poster" class="img-box"></a>
                 </div>
                 <div class="div_animations">
